--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .focusText {
-    @apply hover:text-blue-800 transition duration-200 cursor-pointer focus:text-blue-800 focus:outline-none font-bold;
+    @apply hover:text-yellow-500 transition duration-200 cursor-pointer focus:text-yellow-500 focus:outline-none font-bold;
   }
 
   .btnbasic {
